--- a/LocalVibes/Views/Prueba/Prueba.cshtml
+++ b/LocalVibes/Views/Prueba/Prueba.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <span class="IdUser">Usuario con Id concreto</span>
     <p class="card-text">
-        <span class="IdUser">ID: @Model.user.IdUser</span>
+        <span class="IdUser">ID: @Model.user.IdUser</span><br />
         <span class="UserName">Nombre: @Model.user.UserName</span>
     </p>
     
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@Users.UserName</h5>
                     <p class="card-text">
-                        <span class="IdUser">ID: @Users.IdUser</span>
+                        <span class="IdUser">ID: @Users.IdUser</span> <br />
                         <span class="UserName">Nombre: @Users.UserName</span>
                     </p>
                 </div>
@@ -24,3 +24,4 @@
         </div>
     }
 </div>
+
