Match todo bien

--- a/LocalVibes/Views/Home/Landing.cshtml
+++ b/LocalVibes/Views/Home/Landing.cshtml
@@ -79,8 +79,8 @@
 			<div class="col-12 col-md-6 right-half">
 				<p class="text-white fs-4">Aqui va el boton para la pagina de testing *Por ahora</p>
 				<p class="text-white fs-5">Aquí va una foto grande o incluso de fondo</p>
-				<form asp-action="Prueba" asp-controller="Home" method="get" class="text-center">
-					<button type="submit"class="btn btn-secondary btn-block shadow-sm">
+				<form asp-action="Prueba" asp-controller="Prueba" method="get" class="text-center">
+					<button type="submit" class="btn btn-secondary btn-block shadow-sm">
 						Boton para la pagina de pruebas
 					</button>
 				</form>
