--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -33,13 +33,13 @@
 						<!-- Botones de Iniciar sesión y Registro -->
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="Login">Login</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SignUpUser">Soy nuevo usuario</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="SignUpUser">Soy nuevo usuario</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SignUpProject">Soy nuevo artista/banda</a>
+								<a class="nav-link text-dark" asp-area="" asp-controller="Authentication" asp-action="SignUpProject">Soy nuevo artista/banda</a>
 							</li>
 						</ul>
 					</div>
