--- a/LocalVibes/Views/Authentication/Login.cshtml
+++ b/LocalVibes/Views/Authentication/Login.cshtml
@@ -44,7 +44,7 @@
         <div asp-validation-summary="All" class="text-danger"></div>
 
         <!-- Botón de Enviar -->
-        <button type="submit" class="btn btn-primary">Login</button>
+        <app-button button-type="secondary" onclick="submit" button-text="Iniciar Sesion"></app-button>
 
         <!-- Botones para Redirigir a Registro -->
         <div class="mt-3 text-center">
