--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -20,3 +20,10 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.input-placeholder::placeholder {
+  margin-left: 1em;
+  color: #D9D9D9 !important;
+  font-weight: 600;
+  opacity: 0.2;
+}
