--- a/LocalVibes/Views/Authentication/Login.cshtml
+++ b/LocalVibes/Views/Authentication/Login.cshtml
@@ -37,14 +37,15 @@
         <div asp-validation-summary="All" class="text-danger"></div>
 
         <!-- Botón de Enviar -->
-        <app-button button-type="secondary" onclick="submit" button-text="Iniciar Sesion"></app-button>
+        <button class="btn btn-primary rounded-pill" onclick="submit">Entrar</button>
+
 
         <!-- Botones para Redirigir a Registro -->
         <div class="mt-3 text-center">
             <p>
                 ¿No tienes cuenta?
-                <a asp-controller="Authentication" asp-action="SignUpUser" class="btn btn-secondary ml-2">Registrarse como usuario nuevo</a>
-                <a asp-controller="Authentication" asp-action="SignUpProject" class="btn btn-secondary ml-2">Registrarse como artista o banda nueva</a>
+                <a asp-controller="Authentication" asp-action="SignUpUser" class="btn btn-secondary ml-2 rounded-pill">Registrarse como usuario nuevo</a>
+                <a asp-controller="Authentication" asp-action="SignUpProject" class="btn btn-secondary ml-2 rounded-pill">Registrarse como artista o banda nueva</a>
             </p>
         </div>
     </form>
