--- a/LocalVibes/Views/Authentication/SignUpUser.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpUser.cshtml
@@ -90,7 +90,18 @@
             <span asp-validation-for="DocumentNumber" class="text-danger"></span>
         </div>
 
-        <button type="submit" class="btn btn-primary">Registrar</button>
+        <!-- Botón de Enviar -->
+        <button class="btn btn-primary rounded-pill" onclick="submit">Entrar</button>
+
+
+        <!-- Botones para Redirigir a Registro -->
+        <div class="mt-3 text-center">
+            <p>
+                ¿Ya tienes cuenta?
+                <a asp-controller="Authentication" asp-action="Login" class="btn btn-secondary ml-2 rounded-pill">Iniciar sesion</a>
+            </p>
+        </div>
+
 
     </form>
 </div>
