Mejora de DAL y Landing

--- a/LocalVibes/Views/Prueba/Prueba.cshtml
+++ b/LocalVibes/Views/Prueba/Prueba.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <span class="IdUser">Usuario con Id concreto</span>
     <p class="card-text">
-        <span class="IdUser">ID: @Model.user.IdUser</span><br />
+        <span class="IdUser">ID: @Model.user.IdUsers</span><br />
         <span class="UserName">Nombre: @Model.user.UserName</span>
     </p>
     
@@ -17,7 +17,7 @@
                     <h5 class="card-title">@Users.UserName</h5>
                     <p class="card-text">
                         <ul class="list-group">
-                            <li class="list-group-item">ID: @Users.IdUser</li>
+                            <li class="list-group-item">ID: @Users.IdUsers</li>
                             <li class="list-group-item">Nombre: @Users.UserName</li>
                             <li class="list-group-item">Fecha de registro: @Users.DateRegister.ToString()</li>
 
