--- a/LocalVibes/Views/Home/Landing.cshtml
+++ b/LocalVibes/Views/Home/Landing.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewData["Title"]</title>
     <!-- Enlace a Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Asegura que las mitades lleguen hasta los bordes de la pantalla */
         .left-half {
