--- a/LocalVibes/Views/Authentication/SignUpProject.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpProject.cshtml
@@ -6,7 +6,7 @@
 
 <div class="project-container">
     <h2>Crear Proyecto</h2>
-    <form asp-action="CreateProject" method="post" enctype="multipart/form-data" asp-antiforgery="true">
+    <form asp-action="SignUpProject" method="post" enctype="multipart/form-data" asp-antiforgery="true">
         <!-- Nombre del Proyecto -->
         <div class="form-group">
             <label asp-for="ProjectName">Nombre del Proyecto</label>
