Se puede iniciar sesion como banda y como usuario

--- a/LocalVibes/Views/Authentication/SignUpProject.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpProject.cshtml
@@ -41,14 +41,14 @@
 
         <!-- Administrador -->
         <div class="form-group">
-            <label asp-for="IdUserAdmin">Administrador del Proyecto</label>
-            <select asp-for="IdUserAdmin" class="form-control">
+            <label asp-for="IdUsersAdmin">Administrador del Proyecto</label>
+            <select asp-for="IdUsersAdmin" class="form-control">
                 <option value="">Selecciona un Administrador</option>
                 <!-- Aquí deberías reemplazar con usuarios reales -->
                 <option value="1">Usuario 1</option>
                 <option value="2">Usuario 2</option>
             </select>
-            <span asp-validation-for="IdUserAdmin" class="text-danger"></span>
+            <span asp-validation-for="IdUsersAdmin" class="text-danger"></span>
         </div>
         <br />
 
