--- a/LocalVibes/Views/Home/Home.cshtml
+++ b/LocalVibes/Views/Home/Home.cshtml
@@ -37,20 +37,6 @@
         attribution: 'Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
 
-    var places = [
-        { name: "Museo del Prado", lat: 40.413781, lng: -3.692127, genreId: 1 },
-        { name: "Palacio Real", lat: 40.417955, lng: -3.714312, genreId: 2 },
-        { name: "Puerta del Sol", lat: 40.416935, lng: -3.703570, genreId: 1 }
-    ];
-
-    var musicGenres = @Html.Raw(musicGenresJson);
-    var events = @Html.Raw(eventsJson);
-
-    var genreGroups = {};
-
-    musicGenres.forEach(function (genre) {
-        genreGroups[genre.GenereMusicName] = L.layerGroup().addTo(map);
-    });
 
     places.forEach(function (place) {
         var locationIcon = L.icon({
@@ -86,20 +72,10 @@
         genreGroups[genreName]?.addLayer(marker);
     });
 
-    var layersControl = L.control.layers(null, genreGroups).addTo(map);
-
-    var layersControlContainer = layersControl.getContainer();
-
-    layersControlContainer.style.fontSize = "0.9rem";
-    layersControlContainer.style.textAlign = "left";
-
-    var layersControlButton = document.querySelector('.leaflet-control-layers-toggle');
-    layersControlButton.style.backgroundImage = "url('/Assets/music-note.png')";
-
 </script> *@
 
 <script>
-    var map = L.map('map').setView([40.416775, -3.703790], 13);
+    var map = L.map('map').setView([41.38879, 2.15899], 13);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: 'Map data © <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -124,23 +100,22 @@
 
         var marker = L.marker([e.Location.Latitude, e.Location.Longitude], { icon: locationIcon }).addTo(map);
 
-        marker.on('mouseover', function (e) {
-            marker
-                .bindPopup(`
-                        <div class="card" style="width: 12rem;">
-                            <img src="https://placehold.co/10" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Título del lugar</h5>
-                                <p class="card-text">Este es un ejemplo de contenido Bootstrap en un popup de Leaflet.</p>
-                                <a href="#" class="btn btn-primary">Ver más</a>
-                            </div>
-                        </div>
-                    `)
-                .openPopup();
-        });
+        marker.bindPopup(`
+            <div class="card" style="width: 12rem;">
+                <img src="https://placehold.co/10" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Título del lugar</h5>
+                    <p class="card-text">Este es un ejemplo de contenido Bootstrap en un popup de Leaflet.</p>
+                    <a href="#" class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+        `);
 
-        marker.on('mouseout', function (e) {
-            map.closePopup();
+        e.GeneresMusic.forEach(function (genre) {
+            var genreGroup = genreGroups[genre.GenereMusicName];
+            if (genreGroup) {
+                genreGroup.addLayer(marker);
+            }
         });
     });
 
